<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal|left"
	    android:orientation="vertical"
	    android:padding="8dp" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ruinfo_main_text"
            android:layout_gravity="center_horizontal" />
	
	    <Button
	        android:id="@+id/button1"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/ruinfo_call_button" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/ruinfo_phone_number"
	        android:textColor="@color/faded" />
	
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ruinfo_text_header"
	        android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />
	
	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ruinfo_text_desc"
            android:layout_gravity="center_horizontal" />
	
	    <Button
	        android:id="@+id/button2"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/ruinfo_text_button" />
	
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/ruinfo_text_already" />
	
	    <Button
	        android:id="@+id/button3"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/ruinfo_text_ruinfo" />
	
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ruinfo_email_desc"
            android:layout_gravity="center_horizontal" />
	
	    <Button
	        android:id="@+id/button4"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/ruinfo_email_button" />
	
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/ruinfo_email_address"
	        android:textColor="@color/faded" />
	
	</LinearLayout>
</ScrollView>