<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_weight="1">
    
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <!-- Map section -->

    <!-- Address section -->
    <TableRow
		style="@style/RowHeader" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        style="@style/RowContent" >

        <TextView
            android:id="@+id/addressTextView"
            style="@style/RowContentText" />
    </TableRow>

    <!-- Description Section -->
    <TableRow
        android:id="@+id/descriptionHeaderRow"
		style="@style/RowHeader" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        android:id="@+id/descriptionContentRow"
        style="@style/RowContent" >

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/RowContentText" />
    </TableRow>

    <!-- Nearby Buses section -->
    <TableRow
        android:id="@+id/nearbyBusesHeaderRow"
		style="@style/RowHeader" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearby_bus_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/nearbyBusesContentRow"
        style="@style/RowContent">

        <LinearLayout
            android:id="@+id/nearbyBusesLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
        
    </TableRow>

    <!-- Offices Section -->
    <TableRow
        android:id="@+id/officesHeaderRow"
		style="@style/RowHeader" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offices_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/officesContentRow"
        style="@style/RowContent" >

        <TextView
            android:id="@+id/officesTextView"
            style="@style/RowContentText" />
    </TableRow>
    
    <!-- Building Number Section -->
    <TableRow
		style="@style/RowHeader" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_no_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        style="@style/RowContent" >

        <TextView
            android:id="@+id/buildingNoTextView"
            style="@style/RowContentText" />
    </TableRow>

    <!-- Campus Section -->
    <TableRow
		style="@style/RowHeader" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        style="@style/RowContent" >

        <TextView
            android:id="@+id/campusTextView"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            style="@style/RowContentText" />
    </TableRow>

</TableLayout>

</ScrollView>