<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Hours display pager -->
    <android.support.v4.view.ViewPager
        android:id="@+id/hoursViewPager"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <!-- Hours display title strip -->
        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/hoursPagerTitleStrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/drawer_item_bg"
            android:textColor="@color/white"
            android:padding="8dp"/>

    </android.support.v4.view.ViewPager>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recTableLayout">

            <!-- Address section -->
            <TableRow
                style="@style/RowHeader" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_header"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                style="@style/RowContent" >

                <TextView
                    android:id="@+id/addressTextView"
                    style="@style/RowContentText" />
            </TableRow>

            <!-- Information Desk Section -->
            <TableRow
                android:id="@+id/infoRowHead"
                style="@style/RowHeader" >

                <TextView
                    android:id="@+id/infoRowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rec_info_desk_header"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:id="@+id/infoRowContent"
                style="@style/RowContent" >

                <TextView
                    android:id="@+id/infoDeskNumberTextView"
                    style="@style/RowContentText" />
            </TableRow>

            <!-- Business Office Section -->
            <TableRow
                android:id="@+id/businessRowHead"
                style="@style/RowHeader" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rec_business_office_header"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:id="@+id/businessRowContent"
                style="@style/RowContent" >

                <TextView
                    android:id="@+id/businessOfficeNumberTextView"
                    style="@style/RowContentText" />
            </TableRow>

            <!-- Description Section -->
            <TableRow
                style="@style/RowHeader" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_header"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                style="@style/RowContent" >

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    style="@style/RowContentText" />
            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>